tests/parser/while-statement-block-error.stderr
error: expected '{'
 --> $DIR/while-statement-block-error.lox:1:12
  |
1 | while true _
  |            ^
